--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/server": "^11.0.0-next-beta.208",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.3.1",
     "lucide-react": "^0.309.0",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
