--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "app/_trpc/provider.jsx"  ],
+, "app/_trpc/provider.jsx", "server/mongodb.js"  ],
   "exclude": [
     "node_modules"
   ]
